graphics/vtk/files/tmp
In file included from /opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:10:
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.h:63:57: error: cannot find protocol declaration for 'NSDraggingDestination'
   63 | @interface vtkCocoaGLView : NSView<NSDraggingDestination>
      |                                                         ^
In file included from /opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h:21,
                 from /opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/chrono.h:20,
                 from /opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Common/Core/vtkStringScanner.h:49,
                 from /opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:19:
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h: In member function 'constexpr vtkscn::v4::basic_scan_arg<Context> vtkscn::v4::basic_scan_args<Context>::get(std::size_t) const':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h:6170:17: error: cannot find protocol declaration for 'max_size'
 6170 |             if (SCN_LIKELY(id < max_size())) {
      |                 ^~~~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h: In member function 'constexpr const CharT* vtkscn::v4::detail::format_string_checker<CharT, Source, Args>::on_format_specs(std::size_t, const CharT*, const CharT*)':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h:8647:21: error: cannot find protocol declaration for 'num_args'
 8647 |         return id < num_args ? m_parse_funcs[id](m_parse_context) : begin;
      |                     ^~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h: In member function 'constexpr void vtkscn::v4::detail::format_string_checker<CharT, Source, Args>::set_arg_as_read(size_t)':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/ThirdParty/scn/vtkscn/include/vtkscn/scan.h:8679:16: error: expected unqualified-id before '>=' token
 8679 |         if (id >= num_args) {
      |                ^~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'virtual bool vtkCocoaRenderWindow::InitializeFromCurrentContext()':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:315:53: warning: 'NSOpenGLContext' may not respond to '-pixelFormat'
  315 |     this->SetPixelFormat([currentContext pixelFormat]);
      |                                                     ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:315:53: warning: (messages without a matching method signature will be assumed to return 'id' and accept '...' as arguments)
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'virtual const char* vtkCocoaRenderWindow::ReportCapabilities()':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:483:44: error: 'NSOpenGLPFAOpenGLProfile' was not declared in this scope
  483 |   [pixelFormat getValues:&pfd forAttribute:NSOpenGLPFAOpenGLProfile forVirtualScreen:currentScreen];
      |                                            ^~~~~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'virtual void vtkCocoaRenderWindow::SetSize(int, int)':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:529:72: warning: 'NSView' may not respond to '-convertSizeFromBacking:'
  529 |         NSSize newSize = [theView convertSizeFromBacking:backingNewSize];
      |                                                                        ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:529:26: error: conversion from 'objc_object*' to non-scalar type 'NSSize' requested
  529 |         NSSize newSize = [theView convertSizeFromBacking:backingNewSize];
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'virtual void vtkCocoaRenderWindow::SetPosition(int, int)':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:608:82: warning: 'NSView' may not respond to '-convertPointFromBacking:'
  608 |         NSPoint newPosition = [theView convertPointFromBacking:backingNewPosition];
      |                                                                                  ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:608:31: error: conversion from 'objc_object*' to non-scalar type 'NSPoint' requested
  608 |         NSPoint newPosition = [theView convertPointFromBacking:backingNewPosition];
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'virtual void vtkCocoaRenderWindow::CreateAWindow()':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:878:60: warning: 'NSView' may not respond to '-setWantsBestResolutionOpenGLSurface:'
  878 |       [glView setWantsBestResolutionOpenGLSurface:wantsBest];
      |                                                            ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:900:60: warning: 'vtkCocoaGLView' may not respond to '-setWantsBestResolutionOpenGLSurface:'
  900 |       [glView setWantsBestResolutionOpenGLSurface:wantsBest];
      |                                                            ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm: In member function 'void vtkCocoaRenderWindow::CreateGLContext()':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:967:20: error: 'NSOpenGLProfileVersion3_2Core' was not declared in this scope
  967 |   profileVersion = NSOpenGLProfileVersion3_2Core;
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaRenderWindow.mm:980:20: error: 'NSOpenGLPFAOpenGLProfile' was not declared in this scope
  980 |     attribs[i++] = NSOpenGLPFAOpenGLProfile;
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [Rendering/OpenGL2/CMakeFiles/RenderingOpenGL2.dir/vtkCocoaRenderWindow.mm.o] Error 1
make[2]: Leaving directory `/opt/local/var/macports/build/vtk-1c39adea/work/build'
make[1]: *** [Rendering/OpenGL2/CMakeFiles/RenderingOpenGL2.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
